Update home page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="/assets/css/style.css?v=63caf9cdaa8b513bac56757f901b34e2a0d4ce14">
   </head>
   <body>
+    <header class="py-6">
+      <a href="https://github.com/macosx"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+    </header>
     <div class="container-lg px-3 my-5 markdown-body">
       <h2 id="bootstrap-installation">Bootstrap Installation</h2>
 
@@ -41,10 +44,9 @@
         </div>
       </div>
 
-      <div class="footer border-top border-gray-light mt-5 pt-3 text-center text-gray">
+      <div class="footer border-top border-gray-light mt-6 pt-3 text-center text-gray">
         <p>This project is maintained by <a href="https://github.com/johnsonlee">Johnson Lee</a>.</p>
       </div>
-
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
